@@ -356,3 +356,4 @@ Revision	Version Updated		Log Message
 341		C++			Social reforms no longer in a temp function (no functional change).
 342		C++			Balance Upper House (and move out of a temp function).
 344		C++			Make room in configuration file for V2 gametype.
+354		C++			AHD now gets no_schools for all countries.
